--- a/app/src/main/res/layout/act_home.xml
+++ b/app/src/main/res/layout/act_home.xml
@@ -21,6 +21,14 @@
         android:layout_centerInParent="true" />
 
     <Button
+        android:id="@+id/sign_out"
+        android:layout_width="wrap_content"
+        android:text="SIGN OUT"
+        android:visibility="gone"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true" />
+
+    <Button
         android:id="@+id/ach"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -28,74 +36,84 @@
         android:text="ACHIEVEMENTS" />
 
     <LinearLayout
-        android:layout_width="match_parent"
         android:id="@+id/lead"
-        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_above="@+id/start_game"
-        android:layout_height="wrap_content">
+        android:orientation="horizontal"
+        android:weightSum="4">
 
         <Button
             android:id="@+id/lead_10"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="LEAD10" />
+            android:layout_weight="1"
+            android:text="L10" />
 
 
         <Button
             android:id="@+id/lead_25"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="LEAD25" />
+            android:layout_weight="1"
+            android:text="L25" />
 
 
         <Button
             android:id="@+id/lead_50"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="LEAD50" />
+            android:layout_weight="1"
+            android:text="L50" />
 
 
         <Button
             android:id="@+id/lead_100"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="LEAD100" />
+            android:layout_weight="1"
+            android:text="L100" />
 
     </LinearLayout>
 
 
     <LinearLayout
-        android:layout_width="match_parent"
         android:id="@+id/start_game"
-        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_height="wrap_content">
+        android:orientation="horizontal"
+        android:weightSum="4">
 
         <Button
             android:id="@+id/break_10"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="10" />
 
 
         <Button
             android:id="@+id/break_25"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="25" />
 
 
         <Button
             android:id="@+id/break_50"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="50" />
 
 
         <Button
             android:id="@+id/break_100"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="100" />
 
     </LinearLayout>
