--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FFFFFF</color>
-    <color name="colorPrimaryDark">#FF1B2331</color>
-    <color name="colorAccent">#FF536DFE</color>
+    <color name="colorPrimary">#FFF74048</color>
+    <color name="colorPrimaryDark">#E63F37</color>
+    <color name="colorAccent">#FE425CDD</color>
     <color name="background">#FFF2F2F2</color>
     <color name="white">#FFFFFFFF</color>
     <color name="offwhite">#99FFFFFF</color>
